testdata/asm/invalid/fncall_invalid_03.lisp
;;
(defcolumns (X :i16) (Y :i16))
(defcall (Y) f (X))
